<resources>
    <string name="app_name">Lab05-Actives Kashitsin</string>
    <string name="input_value">Введите значение</string>
    <string name="open_window">Перейти</string>
    <string name="exit">Выход</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="sw1">Переключатель 1</string>
    <string name="sw2">Переключатель 2</string>
    <string name="dialog_window">Диалоговое окно</string>
    <string name="author">Кашицын,393</string>
</resources>